--- a/public/css/tour/tour_responsive.css
+++ b/public/css/tour/tour_responsive.css
@@ -4858,5 +4858,23 @@
   }
 
 
+  .theme_travel .list_product {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5rem 2rem;
+    padding-bottom: 7rem;
+    border-bottom: 1px solid #dbdbdb;
+}
+
+.theme_travel .list_product .item_box {
+    width: calc((100% - 2rem) / 2);
+}
+.theme_travel .list_product .item_box .img {
+    width: 100%;
+    height: 25rem;
+    position: relative;
+}
+
+
 
 }
