--- a/public/css/tour/tour_responsive.css
+++ b/public/css/tour/tour_responsive.css
@@ -4819,9 +4819,15 @@
     transition: background-color 0.3s, color 0.3s;
     justify-content: center;
     align-items: center;
-    width: 4.5rem;
-    height: 4.5rem;
+    width: 6rem;
+    height: 6rem;
   }
+
+  .custom .page-link img {
+        height: 2.3rem;
+    }
+
+
 
   .travel_info .head_list_product .input_search_box input {
     border: none;
@@ -4873,6 +4879,59 @@
     width: 100%;
     height: 25rem;
     position: relative;
+}
+
+
+.view_container .view_top_wrap {
+    padding: 3rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    background: #efefef;
+    border-top: 1px solid #666;
+    border-bottom: 1px solid #e9e9e9;
+    gap: 2rem;
+}
+
+.view_container .view_top_wrap .view_top_ttl {
+    font-size: 2.8rem;
+}
+
+.monkey_theme li {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  width: 100%;  
+  height: 50rem;
+  /* margin: 20px 11px 0; */
+}
+
+.theme_banner .desc {
+    text-align: center;
+    color: #fff;
+    font-size: 2.5rem;
+    display: inline-block;
+    margin-top: 19rem;
+    background: #fb2f2f;
+    padding: 0.7rem 2.5rem;
+    border-radius: 20px;
+}
+.theme_banner .subtitle {
+    font-size: 2.5rem;
+    color: #fff;
+    display: block;
+    margin-top: 3rem;
+}
+
+.theme_banner .title {
+    font-size: 3.8rem;
+    text-align: center;
+    color: #fff;
+    display: block;
+    padding-bottom: 2rem;
+    margin-top: 1rem;
+    font-weight: 400;
 }
 
 
