--- a/public/css/contents/main.css
+++ b/public/css/contents/main.css
@@ -133,9 +133,9 @@
     top: 1%;
 }
 
-.main_sale_banner.visible {
+/* .main_sale_banner.visible {
     top: 1%;
-}
+} */
 
 .main_sale_banner .coupon_sale {
     border-radius: 7px;
