--- a/public/css/contents/guide.css
+++ b/public/css/contents/guide.css
@@ -489,7 +489,7 @@ table.book_tbl tr td .people_cnt_select {
         overflow: inherit;
     }
 
-    .w-100 {
+    .wg-100 {
         width: 100%;
     }
 
