--- a/public/css/tour/tour.css
+++ b/public/css/tour/tour.css
@@ -5922,7 +5922,7 @@
     justify-content: center;
     margin: 60px auto 80px;
     flex-direction: column;
-    max-width: 1000px;
+    max-width: 1200px;
     overflow: hidden;
 }
 
@@ -5940,13 +5940,14 @@
 
 .hoteltheme_main .hotplace .loc_banner {
     height: 400px;
-    width: 320px !important;
+    width: calc((100% - 40px) / 3);
+    /* width: 320px !important; */
     position: relative;
 }
 
 .hoteltheme_main .hotplace .loc_banner a {
     display: block;
-    width: 320px;
+    width: 100%;
     height: 100%;
     position: relative;
     margin: 0 auto;
@@ -5956,12 +5957,18 @@
     text-align: left;
 }
 
+.hoteltheme_main .hotplace .loc_banner a > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 .hoteltheme_main .hotplace .loc_banner a .card {
     position: absolute;
     top: 0;
     color: #fff;
-    width: 290px;
-    height: 350px;
+    width: 100%;
+    height: 100%;
     padding: 0 0 50px 30px;
     cursor: pointer;
     z-index: 9;
@@ -6003,6 +6010,90 @@
     font-size: 14px;
     padding-right: 15px;
 }
+
+.cr_comment_list {
+    width: 99%;
+    padding: 30px 5px;
+    min-height: 300px;
+}
+
+.f_16 {
+    font-size: 16px !important;
+}
+
+.f_orange {
+    color: #fb7622 !important;
+}
+
+#comment_wrap {
+    position: relative;
+    line-height: 18px;
+    margin: 0 auto;
+    border-bottom: 1px solid #bbb;
+}
+
+.mb30 {
+    margin-bottom: 30px !important;
+}
+
+#comment_wrap .comment_input {
+    padding-bottom: 15px;
+    overflow: hidden;
+    display: flex;
+}
+
+.mt15 {
+    margin-top: 15px !important;
+}
+
+#comment_wrap textarea {
+    width: 86%;
+    height: 88px;
+    padding: 10px;
+    border: 1px solid #e6e6e6;
+    margin-right: 5px;
+    resize: auto ;
+}
+
+.b_p3032 {
+    padding: 30px 32px;
+}   
+
+.b_orange_2 {
+    color: #fff !important;
+    border: solid 1px #f4a135;
+    background: #ffb03b;
+}
+
+.custom_btn2 {
+    display: inline-block !important;
+    outline: none !important;
+    cursor: pointer !important;
+    text-align: center !important;
+    text-decoration: none !important;
+    line-height: normal !important;
+    vertical-align: middle !important;
+    border: 0;
+    overflow: visible;
+    font-size: 16px;
+    height: auto ;
+} 
+
+.fl {
+    float: left;
+}
+
+.tbl_st18 {
+    width: 98%;
+    position: relative;
+    font-size: 13px;
+    width: 1000px;
+    text-align: left;
+}
+
+
+
+
 
 /* theme area end */
 
