--- a/public/css/tour/tour_responsive.css
+++ b/public/css/tour/tour_responsive.css
@@ -5003,6 +5003,297 @@
     font-weight: 400;
 }
 
+.theme-section {
+    margin-bottom: 3rem;
+    border-bottom: 1px solid #dddddd7d;
+}
+
+.theme_head01.theme_top {
+    width: 100%;
+    height: 46rem;
+    display: flex;
+    align-items: center;
+    margin-bottom: 5rem;
+}
+
+.theme_head01.theme_top:before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    background: #00000070;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.theme_head01.theme_top .theme_headline {
+    width: 100%;
+    top: 50%;
+    transform: translateY(-50%);
+    text-align: center;
+    position: absolute;
+    color: #fff;
+}
+
+.theme_head01.theme_top .theme_headline h3 {
+    font-size: 3rem;
+    display: block;
+    margin-top: 2rem;
+    font-weight: 400;
+}
+
+.theme_head01.theme_top .theme_headline h1 {
+    font-size: 6rem;
+    display: block;
+    margin-top: 3.5rem;
+}
+
+.stfcomment {
+    font-size: 2.6rem;
+    padding: 0 3rem;
+    color: #2ab6ad;
+    text-align: center;
+    margin: 4rem 0;
+    line-height: 1.4;
+}
+
+.theme_nbox {
+    width: 100%;
+    height: auto;
+}
+
+.theme_nbox .theme_no {
+    margin: 4.5rem 0;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+}
+
+.theme_nbox .theme_no span {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 10rem;
+    height: 10rem;
+    color: #fff;
+    border-radius: 50%;
+    background: #ff6300;
+    flex-direction: column;
+    font-size: 2rem;
+}
+
+.theme_nbox .theme_no span b {
+    display: block;
+    font-size: 4rem;
+    font-weight: 600;
+}
+
+.theme_nbox .box_top {
+    width: 100%;
+    height: unset;
+    overflow: hidden;
+    display: flex;
+    justify-content: space-between;
+    gap: 15px;
+    flex-direction: column;
+}
+
+.theme_nbox .box_top .imgbox {
+    width: 100%;
+    height: 40rem;
+    overflow: hidden;
+    position: relative;
+    border-top-right-radius: 0;
+    border-top-left-radius: 0;
+    order: 1;
+}
+
+.theme_nbox .box_top .txtbox {
+    width: 100%;
+    height: unset;
+    text-align: left;
+    padding: 2rem 3rem;
+}
+
+.theme_nbox .box_top .txtbox .rating {
+    top: -2px;
+    /* height: 2.5rem; */
+    background: transparent url(/img/ico/spr_sub.webp) no-repeat 0 0px;
+    position: relative;
+    /* width: 15rem; */
+}
+
+.theme_nbox .box_top .txtbox h3 {
+    font-size: 3.1rem;
+    padding-top: 2rem;
+    color: #555;
+}
+
+.theme_nbox .box_top .txtbox .txt {
+    padding-top: 2rem;
+    line-height: 1.4;
+}
+
+.theme_nbox .box_top .txtbox .detailbtn {
+    padding: 1rem 2rem;
+    border-radius: 4rem;
+    border: 1px solid #e8e8e8;
+    margin-top: 3rem;
+    display: inline-block;
+}
+
+.box_top.box_topleft .btnbox .detailbtn {
+    float: left;
+}
+
+.theme_nbox .imgbox_bot {
+    margin-top: 2rem;
+    display: flex;
+    justify-content: space-between;
+    gap: 2rem;
+}
+
+.theme_nbox .imgbox_bot span {
+    overflow: hidden;
+    width: 33.33%;
+    height: 16rem;
+    display: block;
+}
+
+.theme_nbox .imgbox_bot span img {
+    width: 100%;
+    min-height: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.theme_nbox .box_top .imgbox img {
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-height: 100%;
+}
+
+.theme_nbox a {
+    text-decoration: none;
+    color: #000;
+    cursor: pointer;
+    margin-bottom: 12rem;
+    display: block;
+}
+
+.theme_nbox:last-child a {
+    margin-bottom: 0;
+}
+
+.hoteltheme_main {
+    display: flex;
+    justify-content: center;
+    margin: 10rem auto 8rem;
+    flex-direction: column;
+    max-width: 1200px;
+    overflow: hidden;
+}
+
+.hoteltheme_main .head {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 2.5rem;
+    align-items: center;
+    font-size: 2.8rem;
+}
+
+.hoteltheme_main .hotplace .loc_banner a .card span {
+    color: #fff;
+    position: absolute;
+    top: 0;
+    background: #fb2f2f;
+    padding: 0.8rem 1.5rem;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
+
+.hoteltheme_main .hotplace .loc_banner a .card strong {
+    font-size: 2.8rem;
+    padding-bottom: 1rem;
+    display: block;
+}
+
+.hoteltheme_main .hotplace .loc_banner a .card p {
+    opacity: .7;
+    color: #fff;
+    font-size: 2.4rem;
+    padding-right: 15px;
+}
+
+.hoteltheme_main .hotplace .loc_banner {
+    height: 50rem;
+    width: calc((100% - 40px) / 3);
+    /* width: 320px !important; */
+    position: relative;
+}
+
+.hoteltheme_main .hotplace {
+    height: unset;
+    position: relative;
+}
+
+.hoteltheme_main .hotplace .loc_banner a .card {
+    position: absolute;
+    top: 0;
+    color: #fff;
+    width: 100%;
+    height: 100%;
+    padding: 0 0 6rem 4rem;
+    cursor: pointer;
+    z-index: 9;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+.cr_comment_list {
+    width: 99%;
+    padding: 30px 5px;
+    min-height: unset;
+}
+
+.f_16 {
+    font-size: 2.6rem !important;
+}
+
+#comment_wrap textarea {
+    width: 86%;
+    height: 13rem;
+    padding: 1.2rem;
+    border: 1px solid #e6e6e6;
+    margin-right: 5px;
+    resize: auto;
+    font-size: 2.5rem;
+}
+
+#comment_wrap textarea::placeholder {
+    font-size: 2.5rem;
+}
+
+.b_p3032 {
+    padding: 3rem 3.2rem;
+}
+
+.custom_btn2 {
+    display: inline-block !important;
+    outline: none !important;
+    cursor: pointer !important;
+    text-align: center !important;
+    text-decoration: none !important;
+    line-height: normal !important;
+    vertical-align: middle !important;
+    border: 0;
+    overflow: visible;
+    font-size: 2.6rem;
+    height: auto;
+}
 
 
 }
