--- a/public/css/contents/sub_responsive.css
+++ b/public/css/contents/sub_responsive.css
@@ -546,7 +546,7 @@
   }
 
   .popup_wrap .meeting_time select {
-    margin-left: 0;
+    margin-left: 2.5rem !important;
   }
 
   .popup_wrap .destination {
