--- a/public/css/contents/main-responsive.css
+++ b/public/css/contents/main-responsive.css
@@ -691,7 +691,7 @@ padding-top: 0 !important; */
   }
 
   .main_page_01 .main_visual_content_ .form_element_ .form_gr_item_ {
-    max-height: 7.5rem !important;
+    /* max-height: 7.5rem !important; */
   }
 
   .form_gr_ p {
