update-member-login

--- a/public/css/contents/member.css
+++ b/public/css/contents/member.css
@@ -258,7 +258,7 @@
 .join .join_list .apple a i {
     width: 31px;
     height: 32px;
-    background-image: url(/img/sub/app-ic.png);
+    background-image: url(/img/sub/ic-apple.png);
 }
 
 .join_step {
