--- a/public/css/contents/member.css
+++ b/public/css/contents/member.css
@@ -255,6 +255,11 @@
     background-image: url(/images/ico/join_google_ico.png);
 }
 
+.join .join_list .apple a {
+    color: #fff;
+    background-color: #252525;
+}
+
 .join .join_list .apple a i {
     width: 31px;
     height: 32px;
